// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogIn when the view is logging in renders the LogIn screen correctly 1`] = `
<BVLinearGradient
  colors={
    Array [
      4291295231,
      4294967295,
    ]
  }
  endPoint={
    Object {
      "x": 0.25,
      "y": 0.3,
    }
  }
  locations={
    Array [
      0.5,
      1,
    ]
  }
  startPoint={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 5,
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
  testID="base-screen"
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
        "right",
        "bottom",
        "left",
      ]
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 20,
          },
          null,
        ]
      }
      testID="horizontalPadding-component"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 44,
          }
        }
        testID="title-header"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.25,
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "width": 20,
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.5,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            onPress={null}
            style={
              Object {
                "alignItems": "center",
                "color": "#000000",
                "flex": 1,
                "fontFamily": "NotoSansJP-Black",
                "fontSize": 16,
                "fontWeight": undefined,
                "letterSpacing": -0.3,
                "lineHeight": 22,
                "textAlign": "center",
              }
            }
            testID="title-text"
          >
            Log In title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.25,
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "width": 20,
              }
            }
            testID="rightPlaceholder-view"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 20,
            },
            null,
          ]
        }
        testID="horizontalPadding-component"
      >
        <View
          style={
            Object {
              "marginVertical": 24,
              "minHeight": 98,
            }
          }
          testID="email-input"
        >
          <View
            style={
              Object {
                "alignContent": "center",
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#242424",
                  "fontFamily": "NotoSansJP-Black",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "letterSpacing": -0.3,
                  "lineHeight": 22,
                  "marginBottom": 4,
                }
              }
              testID="input-label"
            >
              Email
            </Text>
            <Text
              style={
                Object {
                  "color": "#D60A50",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 14,
                  "fontWeight": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginLeft": 4,
                }
              }
              testID="input-required"
            >
              *
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingHorizontal": 0,
                  "width": "100%",
                }
              }
            >
              <View
                collapsable={false}
                nativeID="animatedComponent"
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F2F2F2",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "marginBottom": 5,
                    "minHeight": 52,
                    "paddingHorizontal": 12,
                    "textAlignVertical": "center",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={true}
                  editable={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="e.g. wileypost@gmail.com"
                  placeholderTextColor="#A0A0A0"
                  returnKeyType="default"
                  scrollEnabled={true}
                  secureTextEntry={false}
                  selectionColor="#12A3BE"
                  style={
                    Object {
                      "color": "#000000",
                      "flex": 1,
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 14,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "minHeight": 40,
                      "paddingVertical": 0,
                    }
                  }
                  testID="input"
                  textAlignVertical="center"
                  underlineColorAndroid="transparent"
                  value=""
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#D60A50",
                    "fontFamily": "NotoSansJP-Regular",
                    "fontSize": 12,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "margin": 0,
                    "marginLeft": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginBottom": 48,
              "minHeight": 98,
            }
          }
          testID="password-input"
        >
          <View
            style={
              Object {
                "alignContent": "center",
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#242424",
                  "fontFamily": "NotoSansJP-Black",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "letterSpacing": -0.3,
                  "lineHeight": 22,
                  "marginBottom": 4,
                }
              }
              testID="input-label"
            >
              Password
            </Text>
            <Text
              style={
                Object {
                  "color": "#D60A50",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 14,
                  "fontWeight": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginLeft": 4,
                }
              }
              testID="input-required"
            >
              *
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingHorizontal": 0,
                  "width": "100%",
                }
              }
            >
              <View
                collapsable={false}
                nativeID="animatedComponent"
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F2F2F2",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "marginBottom": 5,
                    "minHeight": 52,
                    "paddingHorizontal": 12,
                    "textAlignVertical": "center",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={true}
                  editable={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="8 characters minimum"
                  placeholderTextColor="#A0A0A0"
                  returnKeyType="default"
                  scrollEnabled={true}
                  secureTextEntry={true}
                  selectionColor="#12A3BE"
                  style={
                    Object {
                      "color": "#000000",
                      "flex": 1,
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 14,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "minHeight": 40,
                      "paddingVertical": 0,
                    }
                  }
                  testID="input"
                  textAlignVertical="center"
                  underlineColorAndroid="transparent"
                  value=""
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../src/assets/icons/eyeSlash.png",
                        }
                      }
                      style={
                        Object {
                          "height": 28,
                          "tintColor": "#000000",
                          "width": 28,
                        }
                      }
                      testID="password-switch"
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#D60A50",
                    "fontFamily": "NotoSansJP-Regular",
                    "fontSize": 12,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "margin": 0,
                    "marginLeft": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 3,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "busy": false,
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="logIn-button"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#12A3BE",
                    "borderColor": "#2089dc",
                    "borderRadius": 26,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "height": 52,
                    "justifyContent": "center",
                    "padding": 8,
                    "width": 164,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 15,
                      "fontWeight": undefined,
                      "letterSpacing": 0.4,
                      "lineHeight": 20,
                      "paddingVertical": 1,
                      "textAlign": "center",
                    }
                  }
                >
                  Log In button title
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "flex-end",
            "paddingBottom": 112,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 20,
              },
              null,
            ]
          }
          testID="horizontalPadding-component"
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#000000",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 15,
                  "fontWeight": undefined,
                  "letterSpacing": 0.4,
                  "lineHeight": 20,
                }
              }
            >
              Forgot password?
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.6)",
        "display": "flex",
        "flexDirection": "column-reverse",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="screenLoader"
  >
    <View
      animated={true}
      animationConfig={
        Object {
          "bounciness": 0,
        }
      }
      animationType="spring"
      indeterminate={true}
      indeterminateAnimationDuration={1000}
      onLayout={[Function]}
      progress={0}
      style={
        Array [
          Object {
            "backgroundColor": undefined,
            "borderColor": "#12A3BE",
            "borderRadius": 0,
            "borderWidth": 0,
            "overflow": "hidden",
            "width": null,
          },
          undefined,
        ]
      }
      testID="progress-bar"
      useNativeDriver={false}
    >
      <View
        style={
          Object {
            "backgroundColor": "#12A3BE",
            "height": 6,
            "transform": Array [
              Object {
                "translateX": -0,
              },
              Object {
                "translateX": -0,
              },
              Object {
                "scaleX": 0.30007,
              },
            ],
          }
        }
      />
    </View>
  </View>
</BVLinearGradient>
`;

exports[`LogIn when the view is not logging in renders the LogIn screen correctly 1`] = `
<BVLinearGradient
  colors={
    Array [
      4291295231,
      4294967295,
    ]
  }
  endPoint={
    Object {
      "x": 0.25,
      "y": 0.3,
    }
  }
  locations={
    Array [
      0.5,
      1,
    ]
  }
  startPoint={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 5,
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
  testID="base-screen"
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
        "right",
        "bottom",
        "left",
      ]
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 20,
          },
          null,
        ]
      }
      testID="horizontalPadding-component"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 44,
          }
        }
        testID="title-header"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.25,
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "width": 20,
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.5,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            onPress={null}
            style={
              Object {
                "alignItems": "center",
                "color": "#000000",
                "flex": 1,
                "fontFamily": "NotoSansJP-Black",
                "fontSize": 16,
                "fontWeight": undefined,
                "letterSpacing": -0.3,
                "lineHeight": 22,
                "textAlign": "center",
              }
            }
            testID="title-text"
          >
            Log In title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.25,
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "width": 20,
              }
            }
            testID="rightPlaceholder-view"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 20,
            },
            null,
          ]
        }
        testID="horizontalPadding-component"
      >
        <View
          style={
            Object {
              "marginVertical": 24,
              "minHeight": 98,
            }
          }
          testID="email-input"
        >
          <View
            style={
              Object {
                "alignContent": "center",
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#242424",
                  "fontFamily": "NotoSansJP-Black",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "letterSpacing": -0.3,
                  "lineHeight": 22,
                  "marginBottom": 4,
                }
              }
              testID="input-label"
            >
              Email
            </Text>
            <Text
              style={
                Object {
                  "color": "#D60A50",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 14,
                  "fontWeight": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginLeft": 4,
                }
              }
              testID="input-required"
            >
              *
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingHorizontal": 0,
                  "width": "100%",
                }
              }
            >
              <View
                collapsable={false}
                nativeID="animatedComponent"
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F2F2F2",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "marginBottom": 5,
                    "minHeight": 52,
                    "paddingHorizontal": 12,
                    "textAlignVertical": "center",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={true}
                  editable={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="e.g. wileypost@gmail.com"
                  placeholderTextColor="#A0A0A0"
                  returnKeyType="default"
                  scrollEnabled={true}
                  secureTextEntry={false}
                  selectionColor="#12A3BE"
                  style={
                    Object {
                      "color": "#000000",
                      "flex": 1,
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 14,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "minHeight": 40,
                      "paddingVertical": 0,
                    }
                  }
                  testID="input"
                  textAlignVertical="center"
                  underlineColorAndroid="transparent"
                  value=""
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#D60A50",
                    "fontFamily": "NotoSansJP-Regular",
                    "fontSize": 12,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "margin": 0,
                    "marginLeft": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginBottom": 48,
              "minHeight": 98,
            }
          }
          testID="password-input"
        >
          <View
            style={
              Object {
                "alignContent": "center",
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#242424",
                  "fontFamily": "NotoSansJP-Black",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "letterSpacing": -0.3,
                  "lineHeight": 22,
                  "marginBottom": 4,
                }
              }
              testID="input-label"
            >
              Password
            </Text>
            <Text
              style={
                Object {
                  "color": "#D60A50",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 14,
                  "fontWeight": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginLeft": 4,
                }
              }
              testID="input-required"
            >
              *
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingHorizontal": 0,
                  "width": "100%",
                }
              }
            >
              <View
                collapsable={false}
                nativeID="animatedComponent"
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F2F2F2",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "marginBottom": 5,
                    "minHeight": 52,
                    "paddingHorizontal": 12,
                    "textAlignVertical": "center",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={true}
                  editable={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="8 characters minimum"
                  placeholderTextColor="#A0A0A0"
                  returnKeyType="default"
                  scrollEnabled={true}
                  secureTextEntry={true}
                  selectionColor="#12A3BE"
                  style={
                    Object {
                      "color": "#000000",
                      "flex": 1,
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 14,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "minHeight": 40,
                      "paddingVertical": 0,
                    }
                  }
                  testID="input"
                  textAlignVertical="center"
                  underlineColorAndroid="transparent"
                  value=""
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../src/assets/icons/eyeSlash.png",
                        }
                      }
                      style={
                        Object {
                          "height": 28,
                          "tintColor": "#000000",
                          "width": 28,
                        }
                      }
                      testID="password-switch"
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#D60A50",
                    "fontFamily": "NotoSansJP-Regular",
                    "fontSize": 12,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "margin": 0,
                    "marginLeft": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 3,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "busy": false,
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="logIn-button"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#12A3BE",
                    "borderColor": "#2089dc",
                    "borderRadius": 26,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "height": 52,
                    "justifyContent": "center",
                    "padding": 8,
                    "width": 164,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 15,
                      "fontWeight": undefined,
                      "letterSpacing": 0.4,
                      "lineHeight": 20,
                      "paddingVertical": 1,
                      "textAlign": "center",
                    }
                  }
                >
                  Log In button title
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "flex-end",
            "paddingBottom": 112,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 20,
              },
              null,
            ]
          }
          testID="horizontalPadding-component"
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#000000",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 15,
                  "fontWeight": undefined,
                  "letterSpacing": 0.4,
                  "lineHeight": 20,
                }
              }
            >
              Forgot password?
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</BVLinearGradient>
`;

exports[`LogIn when the view is not logging in when invalid credentials were submitted shows the inputs with error color 1`] = `
<BVLinearGradient
  colors={
    Array [
      4291295231,
      4294967295,
    ]
  }
  endPoint={
    Object {
      "x": 0.25,
      "y": 0.3,
    }
  }
  locations={
    Array [
      0.5,
      1,
    ]
  }
  startPoint={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 5,
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
  testID="base-screen"
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
        "right",
        "bottom",
        "left",
      ]
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 20,
          },
          null,
        ]
      }
      testID="horizontalPadding-component"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 44,
          }
        }
        testID="title-header"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.25,
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "width": 20,
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.5,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            onPress={null}
            style={
              Object {
                "alignItems": "center",
                "color": "#000000",
                "flex": 1,
                "fontFamily": "NotoSansJP-Black",
                "fontSize": 16,
                "fontWeight": undefined,
                "letterSpacing": -0.3,
                "lineHeight": 22,
                "textAlign": "center",
              }
            }
            testID="title-text"
          >
            Log In title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 44,
              },
              Object {
                "flex": 0.25,
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "width": 20,
              }
            }
            testID="rightPlaceholder-view"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 20,
            },
            null,
          ]
        }
        testID="horizontalPadding-component"
      >
        <View
          style={
            Object {
              "marginVertical": 24,
              "minHeight": 98,
            }
          }
          testID="email-input"
        >
          <View
            style={
              Object {
                "alignContent": "center",
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#242424",
                  "fontFamily": "NotoSansJP-Black",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "letterSpacing": -0.3,
                  "lineHeight": 22,
                  "marginBottom": 4,
                }
              }
              testID="input-label"
            >
              Email
            </Text>
            <Text
              style={
                Object {
                  "color": "#D60A50",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 14,
                  "fontWeight": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginLeft": 4,
                }
              }
              testID="input-required"
            >
              *
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingHorizontal": 0,
                  "width": "100%",
                }
              }
            >
              <View
                collapsable={false}
                nativeID="animatedComponent"
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFEBF2",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "marginBottom": 5,
                    "minHeight": 52,
                    "paddingHorizontal": 12,
                    "textAlignVertical": "center",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={true}
                  editable={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="e.g. wileypost@gmail.com"
                  placeholderTextColor="#A0A0A0"
                  returnKeyType="default"
                  scrollEnabled={true}
                  secureTextEntry={false}
                  selectionColor="#12A3BE"
                  style={
                    Object {
                      "color": "#000000",
                      "flex": 1,
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 14,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "minHeight": 40,
                      "paddingVertical": 0,
                    }
                  }
                  testID="input"
                  textAlignVertical="center"
                  underlineColorAndroid="transparent"
                  value=""
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#D60A50",
                    "fontFamily": "NotoSansJP-Regular",
                    "fontSize": 12,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "margin": 0,
                    "marginLeft": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginBottom": 48,
              "minHeight": 98,
            }
          }
          testID="password-input"
        >
          <View
            style={
              Object {
                "alignContent": "center",
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#242424",
                  "fontFamily": "NotoSansJP-Black",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "letterSpacing": -0.3,
                  "lineHeight": 22,
                  "marginBottom": 4,
                }
              }
              testID="input-label"
            >
              Password
            </Text>
            <Text
              style={
                Object {
                  "color": "#D60A50",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 14,
                  "fontWeight": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginLeft": 4,
                }
              }
              testID="input-required"
            >
              *
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingHorizontal": 0,
                  "width": "100%",
                }
              }
            >
              <View
                collapsable={false}
                nativeID="animatedComponent"
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFEBF2",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "marginBottom": 5,
                    "minHeight": 52,
                    "paddingHorizontal": 12,
                    "textAlignVertical": "center",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={true}
                  editable={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="8 characters minimum"
                  placeholderTextColor="#A0A0A0"
                  returnKeyType="default"
                  scrollEnabled={true}
                  secureTextEntry={true}
                  selectionColor="#12A3BE"
                  style={
                    Object {
                      "color": "#000000",
                      "flex": 1,
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 14,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "minHeight": 40,
                      "paddingVertical": 0,
                    }
                  }
                  testID="input"
                  textAlignVertical="center"
                  underlineColorAndroid="transparent"
                  value=""
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../src/assets/icons/eyeSlash.png",
                        }
                      }
                      style={
                        Object {
                          "height": 28,
                          "tintColor": "#000000",
                          "width": 28,
                        }
                      }
                      testID="password-switch"
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#D60A50",
                    "fontFamily": "NotoSansJP-Regular",
                    "fontSize": 12,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "margin": 0,
                    "marginLeft": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 3,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "busy": false,
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="logIn-button"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#12A3BE",
                    "borderColor": "#2089dc",
                    "borderRadius": 26,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "height": 52,
                    "justifyContent": "center",
                    "padding": 8,
                    "width": 164,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "NotoSansJP-Bold",
                      "fontSize": 15,
                      "fontWeight": undefined,
                      "letterSpacing": 0.4,
                      "lineHeight": 20,
                      "paddingVertical": 1,
                      "textAlign": "center",
                    }
                  }
                >
                  Log In button title
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "flex-end",
            "paddingBottom": 112,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 20,
              },
              null,
            ]
          }
          testID="horizontalPadding-component"
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#000000",
                  "fontFamily": "NotoSansJP-Bold",
                  "fontSize": 15,
                  "fontWeight": undefined,
                  "letterSpacing": 0.4,
                  "lineHeight": 20,
                }
              }
            >
              Forgot password?
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</BVLinearGradient>
`;
